# github-followers-scrape

./: GitHub_Scrape.ipynb  LICENSE  README-old.md  README.md  pyproject.toml  resolve.ipynb  scrape.html
.github/workflows/: python-publish.yml
.ipynb_checkpoints/: main-checkpoint.py  scrape-checkpoint.html
src/akinyeleib/: github_scrape.py  reader.py  work.py
src/github_scrape.egg-info/: PKG-INFO
